output/pcap: add pcapng support as compile option              with tagged packet in comment json: (optionally) add direction to alert json: (optionally) add mac to flow and alert

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -314,6 +314,7 @@ output-tx.c output-tx.h \
 output-json.c output-json.h \
 packet-queue.c packet-queue.h \
 pkt-var.c pkt-var.h \
+pcapng.c pcapng.h \
 reputation.c reputation.h \
 respond-reject.c respond-reject.h \
 respond-reject-libnet11.h respond-reject-libnet11.c \
